src/objects/AMS_XML_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>AMS XML Fields</description>
    <fields>
        <fullName>Field__c</fullName>
        <description>field that has translations, to be used on XML Generator to MDM</description>
        <label>Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation_Type__c</fullName>
        <description>Operation Type: include, exclude, translate</description>
        <label>Operation Type</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>AMS XML Fields</label>
</CustomObject>